--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
     </footer>
   </div>
 
-  <!-- Popup Overlay with iframe -->
+  <!-- Popup Overlay with iframe, reduced size -->
 <div id="popup-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
-  <div class="bg-gray-900 rounded-lg max-w-4xl w-full relative p-4 flex flex-col max-h-[90vh]">
+  <div class="bg-gray-900 rounded-lg max-w-3xl w-[75%] relative p-4 flex flex-col max-h-[67.5vh]">
     <button id="popup-close" class="absolute top-2 right-2 text-gray-400 hover:text-white text-xl">&times;</button>
-    <iframe id="popup-iframe" src="" class="w-full h-[80vh] border-none rounded"></iframe>
+    <iframe id="popup-iframe" src="" class="w-full h-[60vh] border-none rounded"></iframe>
   </div>
 </div>
+
 
   </div>
 
