--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    :root {
+      --yellow: #facc15;
+    }
     .hide-videos iframe {
       display: none;
     }
@@ -94,46 +97,43 @@
         titleRow.appendChild(rating);
 
         // standalone
-const standaloneDiv = document.createElement('div');
-standaloneDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2';
+        const standaloneDiv = document.createElement('div');
+        standaloneDiv.className = 'text-xs text-white mb-2 flex items-baseline gap-2';
 
-const labelStandalone = document.createElement('span');
-labelStandalone.textContent = 'Standalone:';
-labelStandalone.className = 'leading-tight';
-standaloneDiv.appendChild(labelStandalone);
+        const labelStandalone = document.createElement('span');
+        labelStandalone.textContent = 'Standalone:';
+        labelStandalone.className = 'leading-tight';
+        standaloneDiv.appendChild(labelStandalone);
 
-const standaloneWrapper = document.createElement('div');
-standaloneWrapper.className = 'flex items-center gap-1';
+        const standaloneWrapper = document.createElement('div');
+        standaloneWrapper.className = 'flex items-center gap-1';
 
-const yesSpan = document.createElement('span');
-yesSpan.textContent = 'Yes';
-yesSpan.className = mod.standalone
-  ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
-  : 'text-gray-400 text-[10px] leading-tight';
-if (mod.standalone) {
-  yesSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
-}
+        const yesSpan = document.createElement('span');
+        yesSpan.textContent = 'Yes';
+        yesSpan.className = mod.standalone
+          ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
+          : 'text-gray-400 text-[10px] leading-tight';
+        if (mod.standalone) {
+          yesSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
+        }
+        standaloneWrapper.appendChild(yesSpan);
 
-standaloneWrapper.appendChild(yesSpan);
+        const sep = document.createElement('span');
+        sep.textContent = '|';
+        sep.className = 'text-gray-400 text-[10px] leading-tight';
+        standaloneWrapper.appendChild(sep);
 
-const sep = document.createElement('span');
-sep.textContent = '|';
-sep.className = 'text-gray-400 text-[10px] leading-tight';
-standaloneWrapper.appendChild(sep);
+        const noSpan = document.createElement('span');
+        noSpan.textContent = 'No';
+        noSpan.className = !mod.standalone
+          ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
+          : 'text-gray-400 text-[10px] leading-tight';
+        if (!mod.standalone) {
+          noSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
+        }
+        standaloneWrapper.appendChild(noSpan);
 
-const noSpan = document.createElement('span');
-noSpan.textContent = 'No';
-noSpan.className = !mod.standalone
-  ? 'border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
-  : 'text-gray-400 text-[10px] leading-tight';
-if (!mod.standalone) {
-  noSpan.style.backgroundColor = 'rgba(250, 204, 21, 0.45)';
-}
-
-standaloneWrapper.appendChild(noSpan);
-
-standaloneDiv.appendChild(standaloneWrapper);
-
+        standaloneDiv.appendChild(standaloneWrapper);
 
         // Platform
         const platformDiv = document.createElement('div');
@@ -151,7 +151,7 @@ standaloneDiv.appendChild(standaloneWrapper);
           const span = document.createElement('span');
           span.textContent = plat;
           span.className = (mod.platform === plat)
-            ? 'border border-white bg-yellow-400 bg-opacity-50 px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight'
+            ? `border border-white px-2 py-0.5 rounded-sm text-[10px] text-white leading-tight`
             : 'text-gray-400 text-[10px] leading-tight';
           platformWrapper.appendChild(span);
 
@@ -210,66 +210,76 @@ standaloneDiv.appendChild(standaloneWrapper);
 
     function renderStars(rating) {
       const fullStar = '<svg class="w-4 h-4 fill-current" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>';
-      const halfStar = `<svg class="w-4 h-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="halfGrad" x1="0" x2="100%" y1="0" y2="0"><stop offset="50%" stop-color="#facc15"/><stop offset="50%" stop-color="#4b5563"/></linearGradient></defs><path fill="url(#halfGrad)" d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
-      let starsHTML = '';
+      const halfStar = `<svg class="w-4 h-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="halfGrad" x1="0" x2="100%" y1="0" y2="0"><stop offset="50%" stop-color="var(--yellow)"/><stop offset="50%" stop-color="#4b5563"/></linearGradient></defs><path fill="url(#halfGrad)" d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
+      const emptyStar = '<svg class="w-4 h-4 fill-gray-600" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>';
+
+      let stars = '';
       for (let i = 1; i <= 5; i++) {
         if (rating >= i) {
-          starsHTML += fullStar;
-        } else if (rating + 0.5 >= i) {
-          starsHTML += halfStar;
+          stars += fullStar;
+        } else if (rating >= i - 0.5) {
+          stars += halfStar;
         } else {
-          starsHTML += `<svg class="w-4 h-4 fill-gray-600" viewBox="0 0 20 20"><path d="M10 15l-5.878 3.09 1.122-6.545L.487 6.91l6.561-.955L10 0l2.952 5.955 6.561.955-4.757 4.635 1.122 6.545z"/></svg>`;
+          stars += emptyStar;
         }
       }
-      return starsHTML;
+      return stars;
     }
 
-    // Popup code - dynamic content loading without iframe
+    document.getElementById('sort-button').addEventListener('click', () => {
+      sorted = !sorted;
+      const modsToRender = sorted 
+        ? [...mods].sort((a, b) => (b.rating || 0) - (a.rating || 0)) 
+        : originalMods;
+      renderMods(modsToRender);
+    });
+
+    // Debounce helper
+    function debounce(fn, delay) {
+      let timer;
+      return function(...args) {
+        clearTimeout(timer);
+        timer = setTimeout(() => fn.apply(this, args), delay);
+      };
+    }
+
+    const searchInput = document.getElementById('search-input');
+    searchInput.addEventListener('input', debounce(() => {
+      const searchTerm = searchInput.value.toLowerCase();
+      const filtered = mods.filter(mod => mod.title.toLowerCase().includes(searchTerm));
+      renderMods(filtered);
+    }, 300));
+
+    // Popup logic
     const overlay = document.getElementById('popup-overlay');
     const popupContent = document.getElementById('popup-content');
     const popupClose = document.getElementById('popup-close');
 
     function openPopup(url) {
-      popupContent.innerHTML = 'Loading...';
+      popupContent.textContent = 'Loading...';
       overlay.classList.remove('hidden');
-      fetch(url + '?v=' + Date.now())
-        .then(res => {
-          if (!res.ok) throw new Error('Failed to load');
-          return res.text();
-        })
+      fetch(url)
+        .then(res => res.text())
         .then(html => {
           popupContent.innerHTML = html;
-          popupContent.scrollTop = 0;
         })
         .catch(() => {
-          popupContent.innerHTML = '<p class="text-red-400">Failed to load guide.</p>';
+          popupContent.textContent = 'Failed to load content.';
         });
     }
 
-    popupClose.addEventListener('click', () => overlay.classList.add('hidden'));
-    overlay.addEventListener('click', e => {
-      if (e.target === overlay) overlay.classList.add('hidden');
+    popupClose.addEventListener('click', () => {
+      overlay.classList.add('hidden');
     });
 
-    // Sorting and searching
-    document.getElementById('sort-button').addEventListener('click', () => {
-      sorted = !sorted;
-      const toRender = sorted
-        ? [...mods].sort((a, b) => (b.rating || 0) - (a.rating || 0))
-        : [...originalMods];
-      renderMods(toRender);
+    // ESC key closes popup
+    document.addEventListener('keydown', e => {
+      if (e.key === 'Escape' && !overlay.classList.contains('hidden')) {
+        overlay.classList.add('hidden');
+      }
     });
 
-    document.getElementById('search-input').addEventListener('input', e => {
-      const term = e.target.value.toLowerCase();
-      const filtered = mods.filter(mod =>
-        mod.title.toLowerCase().includes(term) ||
-        (mod.description && mod.description.toLowerCase().includes(term))
-      );
-      renderMods(filtered);
-    });
-
-    // Toggle videos visibility
+    // Video toggle button
     const toggleVideosBtn = document.getElementById('toggle-videos');
     toggleVideosBtn.addEventListener('click', () => {
       document.body.classList.toggle('hide-videos');
