--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 </head>
 <body class="bg-gray-900 text-white font-sans p-4">
   <div class="max-w-6xl mx-auto">
+    
     <!-- Title and Video Toggle -->
     <div class="flex justify-between items-center mb-1">
       <h1 class="text-3xl font-bold">Cheeki's Mods Archive</h1>
-      <button id="toggle-videos" class="bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium py-1 px-2 rounded">
+      <button id="toggle-videos" aria-label="Toggle video visibility" class="bg-gray-700 ...">
         Hide Videos
       </button>
+
     </div>
 
     <h2 class="text-lg text-gray-400 mb-3">A collection of S.T.A.L.K.E.R. Story Mods</h2>
